Fix Render database plan to 'free'

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: storeguard-db
-    plan: basic # New plan name
+    plan: free
     databaseName: storeguard
     user: storeguard
 
