--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,9 @@ services:
         fromDatabase:
           name: storeguard-db
           property: connectionString
-      # Shopify (set these manually in Render dashboard)
+      # Shopify
+      - key: SHOPIFY_APP_URL
+        value: https://storeguard-app.onrender.com
       - key: SHOPIFY_API_KEY
         sync: false
       - key: SHOPIFY_API_SECRET
