--- a/insightops/shopify.app.toml
+++ b/insightops/shopify.app.toml
@@ -43,6 +43,18 @@ api_version = "2025-10"
   topics = [ "themes/publish" ]
   uri = "/webhooks/themes/publish"
 
+  [[webhooks.subscriptions]]
+  topics = [ "collections/create" ]
+  uri = "/webhooks/collections/create"
+
+  [[webhooks.subscriptions]]
+  topics = [ "collections/update" ]
+  uri = "/webhooks/collections/update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "collections/delete" ]
+  uri = "/webhooks/collections/delete"
+
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 # StoreGuard scopes: products for change detection, inventory for stock alerts, themes for publish tracking
