--- a/insightops/shopify.app.toml
+++ b/insightops/shopify.app.toml
@@ -43,10 +43,34 @@ api_version = "2025-10"
   topics = [ "themes/publish" ]
   uri = "/webhooks/themes/publish"
 
+  [[webhooks.subscriptions]]
+  topics = [ "discounts/create" ]
+  uri = "/webhooks/discounts/create"
+
+  [[webhooks.subscriptions]]
+  topics = [ "discounts/update" ]
+  uri = "/webhooks/discounts/update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "discounts/delete" ]
+  uri = "/webhooks/discounts/delete"
+
+  [[webhooks.subscriptions]]
+  topics = [ "domains/create" ]
+  uri = "/webhooks/domains/create"
+
+  [[webhooks.subscriptions]]
+  topics = [ "domains/update" ]
+  uri = "/webhooks/domains/update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "domains/destroy" ]
+  uri = "/webhooks/domains/destroy"
+
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 # StoreGuard scopes: products for change detection, inventory for stock alerts, themes for publish tracking
-scopes = "read_inventory,read_products,read_themes"
+scopes = "read_inventory,read_products,read_themes,read_discounts"
 optional_scopes = [ ]
 use_legacy_install_flow = false
 
