fix: add read_orders scope for sales velocity

--- a/insightops/shopify.app.toml
+++ b/insightops/shopify.app.toml
@@ -82,7 +82,7 @@ api_version = "2025-10"
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 # StoreGuard scopes: products for change detection, inventory for stock alerts, themes for publish tracking
-scopes = "read_inventory,read_products,read_themes,read_discounts"
+scopes = "read_inventory,read_products,read_themes,read_discounts,read_orders"
 optional_scopes = [ ]
 use_legacy_install_flow = false
 
